[package]
name = "frequenz-channels-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "frequenz_channels_python_impl"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
pyo3 = "0.18.3"
pyo3-asyncio = { version = "0.18.0", features = ["attributes", "tokio-runtime"]}
tokio = { version = "1.29", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
